# sql-review

./: Dockerfile  README.md  inference.py  openenv.yaml  pyproject.toml  requirements.txt
server/: app.py  environment.py  models.py  tasks.py
